--- a/index.html
+++ b/index.html
@@ -12,29 +12,31 @@
     <img id="site-logo-img" src="/logos/logoscentrodecompras.jpeg" alt="Logo">
     <nav>
       <div class="categorias">
-        <li class="categoria-item ativa" data-categoria="todas" onclick="filtrarPorCategoria('todas')"><i class="fas fa-list mr-2"></i>Todas</li>
-        <li class="categoria-item" data-categoria="eletronicos" onclick="filtrarPorCategoria('eletronicos')"><i class="fas fa-laptop mr-2"></i>Eletrônicos</li>
-        <li class="categoria-item" data-categoria="moda" onclick="filtrarPorCategoria('moda')"><i class="fas fa-tshirt mr-2"></i>Moda</li>
-        <li class="categoria-item" data-categoria="fitness" onclick="filtrarPorCategoria('fitness')"><i class="fas fa-dumbbell mr-2"></i>Fitness</li>
-        <li class="categoria-item" data-categoria="casa" onclick="filtrarPorCategoria('casa')"><i class="fas fa-home mr-2"></i>Casa</li>
-        <li class="categoria-item" data-categoria="beleza" onclick="filtrarPorCategoria('beleza')"><i class="fas fa-magic mr-2"></i>Beleza</li>
-        <li class="categoria-item" data-categoria="esportes" onclick="filtrarPorCategoria('esportes')"><i class="fas fa-futbol mr-2"></i>Esportes</li>
-        <li class="categoria-item" data-categoria="livros" onclick="filtrarPorCategoria('livros')"><i class="fas fa-book mr-2"></i>Livros</li>
-        <li class="categoria-item" data-categoria="infantil" onclick="filtrarPorCategoria('infantil')"><i class="fas fa-baby mr-2"></i>Infantil</li>
-        <li class="categoria-item" data-categoria="celulares" onclick="filtrarPorCategoria('celulares')"><i class="fas fa-mobile-alt mr-2"></i>Celulares</li>
-        <li class="categoria-item" data-categoria="eletrodomesticos" onclick="filtrarPorCategoria('eletrodomesticos')"><i class="fas fa-blender mr-2"></i>Eletrodomésticos</li>
-        <li class="categoria-item" data-categoria="pet" onclick="filtrarPorCategoria('pet')"><i class="fas fa-paw mr-2"></i>Pet</li>
-        <li class="categoria-item" data-categoria="jardinagem" onclick="filtrarPorCategoria('jardinagem')"><i class="fas fa-leaf mr-2attan"></i>Jardinagem</li>
-        <li class="categoria-item" data-categoria="automotivo" onclick="filtrarPorCategoria('automotivo')"><i class="fas fa-car mr-2"></i>Automotivo</li>
-        <li class="categoria-item" data-categoria="gastronomia" onclick="filtrarPorCategoria('gastronomia')"><i class="fas fa-utensils mr-2"></i>Gastronomia</li>
-        <li class="categoria-item" data-categoria="games" onclick="filtrarPorCategoria('games')"><i class="fas fa-gamepad mr-2"></i>Games</li>
+        <span class="categoria-item ativa" data-categoria="todas" onclick="filtrarPorCategoria('todas')">Todas</span>
+        <span class="categoria-item" data-categoria="eletronicos" onclick="filtrarPorCategoria('eletronicos')">Eletrônicos</span>
+        <span class="categoria-item" data-categoria="moda" onclick="filtrarPorCategoria('moda')">Moda</span>
+        <span class="categoria-item" data-categoria="fitness" onclick="filtrarPorCategoria('fitness')">Fitness</span>
+        <span class="categoria-item" data-categoria="casa" onclick="filtrarPorCategoria('casa')">Casa</span>
+        <span class="categoria-item" data-categoria="beleza" onclick="filtrarPorCategoria('beleza')">Beleza</span>
+        <span class="categoria-item" data-categoria="esportes" onclick="filtrarPorCategoria('esportes')">Esportes</span>
+        <span class="categoria-item" data-categoria="livros" onclick="filtrarPorCategoria('livros')">Livros</span>
+        <span class="categoria-item" data-categoria="infantil" onclick="filtrarPorCategoria('infantil')">Infantil</span>
+        <span class="categoria-item" data-categoria="celulares" onclick="filtrarPorCategoria('celulares')">Celulares</span>
+        <span class="categoria-item" data-categoria="eletrodomesticos" onclick="filtrarPorCategoria('eletrodomesticos')">Eletrodomésticos</span>
+        <span class="categoria-item" data-categoria="pet" onclick="filtrarPorCategoria('pet')">Pet</span>
+        <span class="categoria-item" data-categoria="jardinagem" onclick="filtrarPorCategoria('jardinagem')">Jardinagem</span>
+        <span class="categoria-item" data-categoria="automotivo" onclick="filtrarPorCategoria('automotivo')">Automotivo</span>
+        <span class="categoria-item" data-categoria="gastronomia" onclick="filtrarPorCategoria('gastronomia')">Gastronomia</span>
+        <span class="categoria-item" data-categoria="games" onclick="filtrarPorCategoria('games')">Games</span>
       </div>
       <div class="lojas">
         <span class="loja-todas ativa" data-loja="todas" onclick="filtrarPorLoja('todas')">Todas</span>
         <span class="loja" data-loja="amazon" onclick="filtrarPorLoja('amazon')">Amazon</span>
         <span class="loja" data-loja="magalu" onclick="filtrarPorLoja('magalu')">Magalu</span>
         <span class="loja" data-loja="shein" onclick="filtrarPorLoja('shein')">Shein</span>
-        <!-- 
+        <span class="loja" data-loja="shopee" onclick="filtrarPorLoja('shopee')">Shopee</span>
+        <span class="loja" data-loja="mercadolivre" onclick="filtrarPorLoja('mercadolivre')">Mercado Livre</span>
+        <span class="loja" data-loja="alibaba" onclick="filtrarPorLoja('alibaba')">Alibaba</span>
       </div>
     </nav>
   </header>
