--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -8,73 +8,88 @@
   <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-  <div id="login-form" style="display: block;">
-    <h2>Login</h2>
-    <input type="email" id="email" placeholder="E-mail" required />
-    <input type="password" id="password" placeholder="Senha" required />
-    <button onclick="login()">Entrar</button>
-  </div>
-  <div id="form-container" style="display: none;">
-    <h1>Adicionar Produto</h1>
-    <form id="form-produto" enctype="multipart/form-data">
-      <input type="text" name="nome" placeholder="Nome do produto" required />
-      <textarea name="descricao" placeholder="Descrição do produto" required></textarea>
-      <select name="categoria" required>
-        <option value="" disabled selected>Selecione uma categoria</option>
-        <option value="eletronicos">Eletrônicos</option>
-        <option value="moda">Moda</option>
-        <option value="fitness">Fitness</option>
-        <option value="casa">Casa e Decoração</option>
-        <option value="beleza">Beleza</option>
-        <option value="esportes">Esportes</option>
-        <option value="livros">Livros</option>
-        <option value="infantil">Infantil</option>
-        <option value="celulares">Celulares</option>
-        <option value="eletrodomesticos">Eletrodomésticos</option>
-        <option value="pet">Pet</option>
-        <option value="jardinagem">Jardinagem</option>
-        <option value="automotivo">Automotivo</option>
-        <option value="gastronomia">Gastronomia</option>
-        <option value="games">Games</option>
-      </select>
-      <select name="loja" required>
-        <option value="" disabled selected>Selecione uma loja</option>
-        <option value="amazon">Amazon</option>
-        <option value="magalu">Magalu</option>
-        <option value="shein">Shein</option>
-        <option value="shopee">Shopee</option>
-        <option value="mercadolivre">Mercado Livre</option>
-        <option value="alibaba">Alibaba</option>
-      </select>
-      <input type="url" name="link" placeholder="Link do produto (https://...)" required pattern="https?://.+" />
-      <input type="number" name="preco" placeholder="Preço do produto (ex.: 99.99)" step="0.01" min="0" required />
-      <input type="file" name="imagens" accept="image/*" multiple required />
-      <button type="submit">Adicionar</button>
-    </form>
-    <div id="mensagem"></div>
-    <div id="erro"></div>
-
-    <div id="produtos-cadastrados">
-      <h3>Produtos Cadastrados</h3>
-      <table>
-        <thead>
-          <tr>
-            <th>Nome</th>
-            <th>Descrição</th>
-            <th>Categoria</th>
-            <th>Loja</th>
-            <th>Link</th>
-            <th>Preço</th>
-            <th>Imagens</th>
-            <th>Ação</th>
-          </tr>
-        </thead>
-        <tbody id="lista-produtos">
-          <tr><td colspan="8" style="text-align:center;">Carregando produtos...</td></tr>
-        </tbody>
-      </table>
+  <header class="site-header">
+    <div class="logo-container">
+      <img src="/logos/logoscentrodecompras.jpeg" alt="Logo Centro de Compra">
     </div>
+    <div class="header-text">
+      <h1>Gerenciar Produtos</h1>
+      <p>Adicione, edite ou remova produtos do Centro de Compra</p>
+    </div>
+  </header>
+  <div class="container">
+    <main>
+      <div id="login-form" style="display: block;">
+        <h2>Login</h2>
+        <input type="email" id="email" class="barra-busca" placeholder="E-mail" required />
+        <input type="password" id="password" class="barra-busca" placeholder="Senha" required />
+        <button onclick="login()">Entrar</button>
+      </div>
+      <div id="form-container" style="display: none;">
+        <h2>Adicionar Produto</h2>
+        <form id="form-produto" enctype="multipart/form-data">
+          <input type="text" name="nome" class="barra-busca" placeholder="Nome do produto" required />
+          <textarea name="descricao" placeholder="Descrição do produto" required></textarea>
+          <select name="categoria" required>
+            <option value="" disabled selected>Selecione uma categoria</option>
+            <option value="eletronicos">Eletrônicos</option>
+            <option value="moda">Moda</option>
+            <option value="fitness">Fitness</option>
+            <option value="casa">Casa e Decoração</option>
+            <option value="beleza">Beleza</option>
+            <option value="esportes">Esportes</option>
+            <option value="livros">Livros</option>
+            <option value="infantil">Infantil</option>
+            <option value="celulares">Celulares</option>
+            <option value="eletrodomesticos">Eletrodomésticos</option>
+            <option value="pet">Pet</option>
+            <option value="jardinagem">Jardinagem</option>
+            <option value="automotivo">Automotivo</option>
+            <option value="gastronomia">Gastronomia</option>
+            <option value="games">Games</option>
+          </select>
+          <select name="loja" required>
+            <option value="" disabled selected>Selecione uma loja</option>
+            <option value="amazon">Amazon</option>
+            <option value="magalu">Magalu</option>
+            <option value="shein">Shein</option>
+            <option value="shopee">Shopee</option>
+            <option value="mercadolivre">Mercado Livre</option>
+            <option value="alibaba">Alibaba</option>
+          </select>
+          <input type="url" name="link" class="barra-busca" placeholder="Link do produto (https://...)" required pattern="https?://.+" />
+          <input type="number" name="preco" class="barra-busca" placeholder="Preço do produto (ex.: 99.99)" step="0.01" min="0" required />
+          <input type="file" name="imagens" accept="image/*" multiple required />
+          <button type="submit">Adicionar</button>
+        </form>
+        <div id="mensagem"></div>
+        <div id="erro"></div>
+        <div id="produtos-cadastrados">
+          <h3>Produtos Cadastrados</h3>
+          <table>
+            <thead>
+              <tr>
+                <th>Nome</th>
+                <th>Descrição</th>
+                <th>Categoria</th>
+                <th>Loja</th>
+                <th>Link</th>
+                <th>Preço</th>
+                <th>Imagens</th>
+                <th>Ação</th>
+              </tr>
+            </thead>
+            <tbody id="lista-produtos">
+              <tr><td colspan="8" style="text-align:center;">Carregando produtos...</td></tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </main>
   </div>
+  <footer>
+    <span id="year"></span>
+  </footer>
   <script type="module" src="/admin.js"></script>
 </body>
 </html>
